# simple_cli

./: .gitignore  CMakeLists.txt  README.md
cmake/: build_flags.cmake
examples/: CMakeLists.txt  quick_start.cpp
include/smplcli/: errors.h  parameter.h  program_parameters.h  tokenizer.h
src/: errors.cpp  parameter.cpp  program_parameters.cpp  tokenizer.cpp
test/: CMakeLists.txt  test_parameter.cpp  test_program_parameters.cpp  test_tokenizer.cpp
tests/: CMakeLists.txt  test_program_parameters.cpp
tests/asan_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/asan_build/lib/Catch2/: Makefile  cmake_install.cmake
tests/asan_build/lib/Catch2/src/: Makefile  cmake_install.cmake
tests/msan_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/msan_build/lib/Catch2/: Makefile  cmake_install.cmake
tests/msan_build/lib/Catch2/src/: Makefile  cmake_install.cmake
